# ranch-hand

./: Cargo.toml  LICENSE  README.md
.beads/: beads.left.jsonl  beads.left.meta.json
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/rust-lessons/: CONTRIBUTING.md  common-footguns.md  error-handling-deep-dive.md  file-io-deep-dive.md  fundamentals-deep-dive.md  index.md  performance-deep-dive.md  quick-reference.md  type-safety-deep-dive.md
src/: cli.rs  config.rs  constants.rs  main.rs  paths.rs
src/client/: http.rs
src/commands/: api.rs  backend.rs  cache.rs  certs.rs  diagnose.rs  mod.rs  settings.rs  version.rs
src/utils/: checksum.rs  download.rs  mod.rs
