[package]
name = "ranch-hand"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for managing Rancher Desktop"
authors = ["dwalleck"]
license = "MIT"
repository = "https://github.com/dwalleck/ranch-hand"

[[bin]]
name = "rh"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
indicatif = "0.17"
colored = "2"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
thiserror = "2"
anyhow = "1"
futures-util = "0.3"
url = "2"
base64 = "0.22"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = { version = "0.26", features = ["ring"] }
webpki-roots = "0.26"
x509-parser = "0.17"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3"
rstest = "0.26"

[build-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow descriptive type names that include the module name
module_name_repetitions = "allow"

[profile.release]
strip = true
lto = true
codegen-units = 1

# Temporary patch for cmake to support VS 18 on Windows ARM64
# See: https://github.com/reflectronic/cmake-rs/tree/vs-18
[patch.crates-io]
cmake = { git = "https://github.com/reflectronic/cmake-rs", branch = "vs-18" }
